# uazapi-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
src/uazapi_mcp/: core.py  server.py  tools_admin.py  tools_business.py  tools_campaigns.py  tools_chats.py  tools_events.py  tools_groups.py  tools_instance.py  tools_messages.py  tools_newsletter.py  tools_send.py
tests/: smoke_test.py
