[project]
name = "uazapi-mcp"
version = "0.2.0"
description = "MCP server para a UAZAPI (uazapiGO) WhatsApp HTTP API"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27",
]

[project.scripts]
uazapi-mcp = "uazapi_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
